--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,9 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
     implementation("com.google.firebase:firebase-auth")
     implementation 'com.google.firebase:firebase-analytics'
+    implementation("com.google.firebase:firebase-database")
+
+    // for image view
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
