--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
-            android:name=".LoginAndRegister"
+            android:name=".Login"
+            android:exported="false" />
+        <activity
+            android:name=".Register"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +25,6 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            />
     </application>
-
 </manifest>
