--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.myapplication'
+    namespace 'com.example.DocOnDock'
     compileSdk 34
 
     defaultConfig {
-        applicationId "com.example.myapplication"
+        applicationId 'com.example.DocOnDock'
         minSdk 24
         targetSdk 34
         versionCode 1
@@ -27,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -36,13 +39,32 @@ dependencies {
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.firebase.auth
+    implementation libs.firebase.inappmessaging
+    implementation libs.navigation.fragment
+    implementation libs.navigation.ui
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation("com.airbnb.android:lottie:3.5.0")
     implementation platform('com.google.firebase:firebase-bom:32.8.0')
     implementation("com.google.firebase:firebase-auth")
     implementation 'com.google.firebase:firebase-analytics'
     implementation("com.google.firebase:firebase-database")
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    //add dependency for video call
+    implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'com.mesibo.api:webrtc:1.0.5'
+    implementation 'com.guolindev.permissionx:permissionx:1.6.1'
+
+    // add the dependency for the Google AI client SDK for Android
+    implementation("com.google.ai.client.generativeai:generativeai:0.3.0")
+
+    // Required for one-shot operations (to use `ListenableFuture` from Guava Android)
+    implementation("com.google.guava:guava:31.0.1-android")
+
+    // Required for streaming operations (to use `Publisher` from Reactive Streams)
+    implementation("org.reactivestreams:reactive-streams:1.0.4")
+
 
     // for image view
     implementation 'de.hdodenhof:circleimageview:2.2.0'
