--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false" />
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,13 +24,47 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Current_Appointment_Details_Doctor"
+            android:exported="false" />
+        <activity
+            android:name=".Current_Appointment_Details_Patient"
+            android:exported="false" />
+        <activity
+            android:name=".Appointment_Request_Details"
+            android:exported="false" />
+        <activity
+            android:name=".ui.Video_Call_Menu"
+            android:exported="false" />
+        <activity
+            android:name=".ui.CallActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Appointment_Requests"
+            android:exported="false" />
+        <activity
+            android:name=".Current_Appointments"
+            android:exported="false" />
+        <activity
+            android:name=".Book_Appointment"
+            android:exported="false" />
+        <activity
+            android:name=".Recommend_Doctor"
+            android:exported="false" />
+        <activity
+            android:name=".Register_Doctor"
+            android:exported="false" />
+        <activity
+            android:name=".Register_Patient"
+            android:exported="false" />
+        <activity
             android:name=".MessageActivity"
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".Register"
             android:exported="false" />
         <activity
             android:name=".Login"
-            android:exported="false" />
-        <activity
-            android:name=".Register"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +72,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MainLanguage" />
+        <activity android:name=".Dashboard_Patient" />
+        <activity android:name=".Tablayout" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".Dashboard_Doctor" />
     </application>
 
 </manifest>
